--- a/src/app/course/components/edit-course-modules-sidebar/edit-course-modules-sidebar.component.scss
+++ b/src/app/course/components/edit-course-modules-sidebar/edit-course-modules-sidebar.component.scss
@@ -5,3 +5,11 @@
     background-color: aliceblue;
   }
 }
+
+.edit-buttons {
+  .p-button {
+    width: 2rem!important;
+    height: 2rem!important;
+    padding: 0!important;
+  }
+}
