--- a/src/app/course/components/edit-course-modules-page/edit-course-modules-page.component.html
+++ b/src/app/course/components/edit-course-modules-page/edit-course-modules-page.component.html
@@ -7,6 +7,6 @@
                                      [courseId]="courseId" [selectedLesson]="selectedLesson"></app-edit-course-modules-sidebar>
   </div>
   <div class="col-9 p-5 shadow-4 bg-white border-round">
-    <app-edit-course-questions-list [lessonId]="lessonId"></app-edit-course-questions-list>
+    <app-edit-course-questions-list [lessonId]="lessonId" [moduleId]="moduleId"></app-edit-course-questions-list>
   </div>
 </div>
