--- a/src/app/course/components/questions/question-range-answer/question-range-answer.component.html
+++ b/src/app/course/components/questions/question-range-answer/question-range-answer.component.html
@@ -2,6 +2,11 @@
   <h4 class="mt-0 mb-2">Question name</h4>
   <p-editor [formControl]="questionName" [style]="{height: '100px'}"></p-editor>
 </div>
+<div class="mb-4">
+  <h4 class="mt-0 mb-2">Number of steps</h4>
+  <input pInputText [formControl]="stars" class="w-6 p-inputtext-sm"/>
+</div>
+
 <div class="w-full">
   <h4 class="mt-0 mb-2">Labels</h4>
 
