--- a/src/app/shared/components/questions/question-range-display/question-range-display.component.html
+++ b/src/app/shared/components/questions/question-range-display/question-range-display.component.html
@@ -1,6 +1,6 @@
 <div [innerHTML]="questionLabel.value" class="mb-4"></div>
 <div class="mb-2 flex align-items-center">
-  <span class="mr-2">{{options[0]}}</span>
-  <p-rating [formControl]="answer"></p-rating>
-  <span class="ml-2">{{options[1]}}</span>
+  <span class="mr-2">{{options.labels?.[0]}}</span>
+  <p-rating [formControl]="answer" [stars]="options.stars"></p-rating>
+  <span class="ml-2">{{options.labels?.[1]}}</span>
 </div>
