--- a/src/app/shared/components/questions/question-text-display/question-text-display.component.html
+++ b/src/app/shared/components/questions/question-text-display/question-text-display.component.html
@@ -1,2 +1,2 @@
 <div [innerHTML]="questionLabel.value"></div>
-<textarea pInputTextarea class="w-full" [formControl]="answer" [readOnly]="readonly"></textarea>
+<textarea pInputTextarea class="w-full h-6rem" [formControl]="answer" [readOnly]="readonly"></textarea>
