--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,9 +7,12 @@
 
 body {
   margin: 0;
-  background-color: #b6c2c9;
 }
 
  a {
    text-decoration: none;
+ }
+
+ .ql-font-monospace {
+   font-family: Monaco, Courier New, monospace;
  }
