--- a/src/app/shared/components/questions/question-table-display/question-table-display.component.scss
+++ b/src/app/shared/components/questions/question-table-display/question-table-display.component.scss
@@ -3,20 +3,41 @@
   width: 100%;
   table-layout: fixed;
 
+  &.two-cols {
+    td:first-child {
+      width: 33%;
+    }
+
+    td:last-child {
+      width: 66%;
+    }
+  }
+
   td {
     border: 1px solid rgb(72, 48, 117);
+    padding: 0.2rem 0.5rem;
+    height: 1px;
+
+    div {
+      height: 5rem;
+      display: flex;
+      align-items: center;
+    }
   }
 
   .static-cell {
     background-color: rgb(228, 233, 241);
     font-weight: bolder;
+    padding: 0.5rem 1rem;
   }
 
   textarea {
+    width: 100%;
     height: 100%;
     border: none;
     resize: none;
     outline: none;
     box-shadow: none;
+    margin-top: 0!important;
   }
 }
