--- a/src/app/shared/components/questions/question-table-display/question-table-display.component.scss
+++ b/src/app/shared/components/questions/question-table-display/question-table-display.component.scss
@@ -19,7 +19,7 @@
     height: 1px;
 
     div {
-      height: 5rem;
+      min-height: 5rem;
       display: flex;
       align-items: center;
     }
