--- a/src/app/shared/components/questions/question-download-display/question-download-display.component.html
+++ b/src/app/shared/components/questions/question-download-display/question-download-display.component.html
@@ -1,2 +1,2 @@
 <div [innerHTML]="sectionText"></div>
-<button pButton (click)="download()" label="Download {{isBlock ? 'Module' : 'Course'}}" [disabled]="readonly"></button>
+<button pButton (click)="download()" label="Скачать {{isBlock ? 'Модуль' : 'Курс'}}" [disabled]="readonly"></button>
