--- a/src/app/shared/components/questions/question-download-display/question-download-display.component.html
+++ b/src/app/shared/components/questions/question-download-display/question-download-display.component.html
@@ -1,2 +1,3 @@
 <div [innerHTML]="sectionText"></div>
+{{isBlock}}
 <button pButton (click)="download()" label="Скачать {{isBlock ? 'Модуль' : 'Курс'}}" [disabled]="readonly"></button>
