--- a/src/app/shared/components/questions/question-download-display/question-download-display.component.html
+++ b/src/app/shared/components/questions/question-download-display/question-download-display.component.html
@@ -1,2 +1,3 @@
+<i class="pi pi-download mr-2"></i>
 <div [innerHTML]="sectionText"></div>
 <button pButton (click)="download()" label="Скачать {{isBlock ? 'Модуль' : 'Курс'}}" [disabled]="readonly"></button>
